# m245-projektarbeit

./: .dockerignore  .env.example  .gitignore  GEMINI.md  HANDOFF.md  docker-compose.yml  stitch_designs.rar
backend/: Cargo.toml  Dockerfile  GEMINI.md
backend/.sqlx/: query-00870aba5073cdce93a6ee84186c8bd0cc1072d91a6b580a0085e181302b3e81.json  query-1711dd676286afb53dc92a87b929fb34f098043b3c84da2b1bed90f3fd3e2941.json  query-22ab8c4e03cd9ffcf316c8430a33ebcab335a60c1db5e11c36672bc6685fe36c.json  query-2c62967f3eaf583f3ff8b9aa70a479dbf1203729ae637e5d6c78e1b0b0916325.json  query-400b45ab1cb4aeda97222e6a90d7057e10ac37696f656da258ee8128627d37ef.json  query-40a3db3b7e1e8928884ab20a7feb7ba7dfd747dff92b728cfc85567e32571925.json  query-45a79c23122167ecf89e360a2bc5340b1ef5fd98accbab177e0a18ee1e1906c9.json  query-4e9df722a5586b3f93435af581d703ce24bfa5af69f876efa4f96176d5f4323b.json  query-5706467c4750caec88096bec9a342377ca19af1a05b4fbb33730c55f3b97beee.json  query-59a3d59ae6a0ab13592469d212e5631c8fad0d69ef7bc1d363a5de7047220b23.json  query-8bbc9eab8ea12246d51d9671642f77a7585b1e8f10d1a8b4120592a6931424a9.json  query-8fb706f832347ee6f5011a79cdc4c7c809ffec3c2bbc38f7b2890d64f50d26b5.json  query-bc07d686c72f41f0f962fa7557ce3f1d39ab86a5fb8f7bd6b3141b5771cc8401.json  query-bd51392c72be5416dc2463c9218597272fb91b9ff32bf651f1712a8d635d0870.json  query-e9451ce9c218fb14f1d7e8a54fe1867c0e14e3975f77e4497c0dbee4166d19ef.json
backend/migrations/: 20260508112700_create_refresh_tokens_table.sql  20260508120000_create_attendance_tables.sql
backend/src/: errors.rs  lib.rs  main.rs
backend/src/handlers/: absenzen.rs  auth.rs  documents.rs  grades.rs  health.rs  lookups.rs  mod.rs  timetable.rs  user.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs
backend/src/models/: absenzen.rs  auth.rs  grades.rs  mod.rs  pagination.rs  types.rs
backend/src/routes/: absenzen.rs  api_versioning.rs  auth.rs  documents.rs  grades.rs  health.rs  lookups.rs  mod.rs  timetable.rs  user.rs
backend/src/services/: auth.rs  hash.rs  mod.rs
backend/tests/: documents_test.rs  grades_test.rs  health_test.rs  lookups_test.rs  timetable_test.rs  user_test.rs
database/: 001_schema.sql  002_example_data.sql  003_timetable_seed.sql  004_attendance_seed.sql  005_grades_seed.sql  attendance_seed.sql  example_bulk_data.sql  example_data.sql  schema.sql  timetable_seed.sql
docs/: Roadmap.md
docs/app/: API.md  (+4 more)
frontend/: Dockerfile  package-lock.json  package.json
stitch_designs/: DESIGN.md
wireframes/: Template.md
(+66 files in other folders)
