[package]
name = "wiss-estudio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Axum Framework
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["typed-header", "query", "multipart", "cookie"] }

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tower Ecosystem
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout", "trace", "fs", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
moka = { version = "0.12", features = ["future"] }
tokio-util = { version = "0.7", features = ["io"] }

# Testing
tower-service = "0.3"
http-body-util = "0.1"
rust_decimal = "1.42.0"
